tests/generics/async_basic.diag
async_basic.ax:5:18: error: await requires Future[T], found 22
async_basic.ax:5:18: error: await requires Future[T], found 22
