tests/generics/async_basic.ax
async fn fetch_data() -> i32:
    return 42

async fn main():
    let result = await fetch_data()
